chapter-05-secure-api-development/deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: applications
  labels:
    kubernetes.io/metadata.name: applications
