chapter-05-secure-api-development/deployment/deployment-code.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zerotrustapi
  labels:
    app: zerotrustapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zerotrustapi
  template:
    metadata:
      labels:
        app: zerotrustapi
    spec:
      serviceAccountName: zerotrustapi
      containers:
      - name: zerotrustapi
        image: zerotrustapi:1.0.0
