chapter-05-secure-api-development/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zerotrustapi-ingress
  annotations:
    konghq.com/plugins: phantom-token
spec:
  ingressClassName: kong
  rules:
    - host: api.democluster.example
      http:
        paths:
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: zerotrustapi-svc
                port:
                  number: 8000
  tls:
  - hosts:
    - api.democluster.example
    secretName: external-tls
